fix: category layout bug

--- a/src/pages/Home/styles/mobile.scss
+++ b/src/pages/Home/styles/mobile.scss
@@ -45,7 +45,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     background-color: white;
     transition: transform 300ms ease-out;
     font-size: 100px;
@@ -54,6 +54,9 @@
     }
     &.close {
       transform: translate(-100%);
+    }
+    .icon {
+      margin: 30px 0;
     }
   }
 
